[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entity/Boss/LastStand/TealLastStand/TealLastStand.gd" type="Script" id=1]
[ext_resource path="res://Art/Character/Teal/TealLeft.png" type="Texture" id=2]
[ext_resource path="res://Sound/Weapon/LightRetroGun.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 16 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Physical/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -40, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Physical/Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Physical/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Physical/Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 0.34151, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 14.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Physical:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 7, 7.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -32, 0 ), Vector2( -32, 0 ), Vector2( 0, 0 ) ]
}

[node name="TealLastStand" type="Node2D"]
position = Vector2( 1968, -16 )
script = ExtResource( 1 )

[node name="Physical" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Physical"]
visible = false
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Physical"]
monitoring = false
collision_layer = 524288
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Physical/Area2D"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="Physical"]
cast_to = Vector2( -200, 0 )
collision_mask = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 2 )
anims/movement = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="GunAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 2.0
bus = "Effects"
[connection signal="body_entered" from="Physical/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
